fixing video on safari, fixing scroll down icon

--- a/src/components/Home/Videos/styles/BackgroundVideo.css
+++ b/src/components/Home/Videos/styles/BackgroundVideo.css
@@ -3,3 +3,20 @@
   z-index: -1;
   width: 100%;
 }
+
+.overlayEnd {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.sticky {
+  position: fixed;
+  bottom: 0px;
+  margin-bottom: 100px;
+  left: 0px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
